# synapse-fleet

./: .gitignore  README.md  main.py  patch_agents.py  patch_facts.py  patch_hardening.py  pyproject.toml  start.sh
agents/: board_notifier.py  board_notifier.py.hardening.bak  board_notifier.py.openrouter.bak  exposure_analyzer.py  exposure_analyzer.py.hardening.bak  exposure_analyzer.py.openrouter.bak  lawfeed.py  lawfeed.py.hardening.bak  lawfeed.py.openrouter.bak  lawfeed.py.prefacts.bak  llm.py  llm.py.hardening.bak  remediation_architect.py  remediation_architect.py.hardening.bak  remediation_architect.py.openrouter.bak  risk_assessor.py  risk_assessor.py.hardening.bak  risk_assessor.py.openrouter.bak  risk_assessor.py.prefacts.bak  supervisor.py  ui_reporter.py
config/: company_profile.json  company_profile.json.template  sdk.py
config/policies/: sample_data_retention_policy.txt
data_sources/: company_policies.py  edgar.py  eurlex.py  regulations.py
landing/: index.html  package-lock.json  package.json
landing/src/: App.jsx  Fleet.jsx  Footer.jsx  HowItWorks.jsx  Outcomes.jsx  Power.jsx  Problem.jsx  Reveal.jsx  SDK.jsx  WhoItsFor.jsx  index.css  synapse-hero.jsx
scripts/: add_agents_to_room.py
ui/: App.jsx  index.html  package-lock.json  package.json  server.py  trigger.sh  vite.config.js
