[project]
name = "synapse-fleet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "band-sdk[anthropic,langgraph]>=1.0.0",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]
